chore: fix spacing

--- a/src/pages/TelaLogin/TelaLogin.module.css
+++ b/src/pages/TelaLogin/TelaLogin.module.css
@@ -113,7 +113,7 @@
 .form {
     display: flex;
     flex-direction: column;
-    gap: 12px;
+    gap: 16px;
 }
 
 .esqueceu_senha, .cadastro {
